# Cement-Plant-AI-Optimization-System

./: README.md  dev.ps1  test-websocket-fix.md  todo.md
backend/: README.md  clean.ps1  main.py
backend/app/routers/: analytics.py  data.py  websockets.py
backend/app/schemas/: plant.py
backend/app/services/: database.py  optimization_tools.py  scheduler.py
backend/app/tools/: advanced_math_toolkit.py  cement_math_toolkit.py
docs/ai_optimisers/: doc.md  tools.md
docs/features/: doc.md  feature_categorization.py
docs/mcp/: agent_prompts.json  cement_plant_mcp_tools.py
docs/mcp/schemas/: models.py
frontend/: README.md  SUPABASE_SETUP.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: timestamp.tsx
frontend/src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
frontend/src/constants/: api.ts  index.ts
frontend/src/hooks/: use-supabase-data.ts
frontend/src/lib/: supabase.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: api.ts  database.types.ts  plant-data.ts
server/: .env.example  .gitignore  README.md  pyproject.toml  run.py
server/app/core/: config.py  dependencies.py  logging_config.py  tables.py
server/app/routers/: ai.py  websockets.py
server/app/schemas/: plant.py  tool_metrics.py
server/app/services/: optimization_tools.py  scheduler.py
server/app/tools/: cement_optimization_tools.py
server/app/utils/: websocket_manager.py
server/cement_agent/: README.md  pyproject.toml
server/cement_agent/src/agent/: graph.py  tools.py
(+9 files in other folders)
